fix(react): adjust spacing for mobile map markers

--- a/src/css/_marker.scss
+++ b/src/css/_marker.scss
@@ -11,7 +11,7 @@
 
 .nutrition-navigator__marker-content-wrap {
   display: grid;
-  grid-gap: 15px;
+  grid-gap: 20px;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   padding: 12px 0;
   font-weight: 800;
